--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,10 +1,10 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
   top: 50%;
+  padding: 35px;
   transform: translateY(-50%);
 }
 
