--- a/src/global.scss
+++ b/src/global.scss
@@ -19,6 +19,17 @@ body {
   font-family: "Montserrat" !important;
 }
 
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 41px;
+  letter-spacing: 1.8px;
+  font-weight: 300;
+  font-style: italic;
+}
+
 .md body {
   --ion-background-color: #455a64;
   --ion-toolbar-background: #000000;
@@ -29,41 +40,44 @@ body {
   display: flex !important;
   align-items: center !important;
   width: 100% !important;
-  padding: 25px;
+  padding: 20px 50px;
   font-family: "Montserrat" !important;
   .calcLogo {
-    max-width: 50px;
-    margin-right: 15px;
+    max-width: 75px;
+    margin-right: 35px;
   }
 }
 
-.entryForm {
-  text-align: left;
-  font-family: "Montserrat" !important;
-  .calculator {
+.calculator {
+  .entryForm {
+    text-align: left;
+    font-family: "Montserrat" !important;
+    max-width: 50%;
     form {
       display: flex;
-      width: 40%;
+      width: 100%;
       justify-content: space-between;
       align-items: center;
-      grid-gap: 15px;
+      grid-gap: 20px;
       flex-wrap: wrap;
       text-align: center;
       input {
         color: white;
-        font-size: 0.85em;
+        font-size: 0.95em;
         font-weight: 700;
         background: #000000;
         border: none;
         outline: none;
         padding: 15px;
         border-radius: 4px;
+        width: 100%;
+        min-width: 249px;
         &.fullWidth {
           max-width: 100% !important;
           width: 100% !important;
         }
         &:not(.fullWidth) {
-          max-width: 50%;
+          max-width: 48%;
         }
         &::placeholder {
           color: #455a64;
@@ -83,6 +97,43 @@ body {
       }
     }
   }
+}
+
+#statistics {
+  input {
+    background: transparent;
+    font-weight: 300;
+  }
+}
+
+#container {
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  padding: 35px;
+  transform: translateY(-50%);
+  display: flex;
+  grid-gap: 35px;
+}
+
+#container strong {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+#container p {
+  font-size: 16px;
+  line-height: 22px;
+
+  color: #8c8c8c;
+
+  margin: 0;
+}
+
+#container a {
+  text-decoration: none;
 }
 
 /* Core CSS required for Ionic components to work properly */
