--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,95 +10,7 @@
   <div class="calculator" id="container">
     <div class="entryForm">
       <h2>Financial Information</h2>
-      <form
-        class="financialForm"
-        oninput="function updateStats(event) {
-
-          let hourlyRate =  document.querySelector(`#hourlyInput`).value.replace(/[^0-9.]/g, ``);
-          let weeklyHours = document.querySelector(`#weeklyInput`).value.replace(/[^0-9.]/g, ``);
-          let annualSalary = document.querySelector(`#salaryInput`).value.replace(/[^0-9.]/g, ``);
-
-          let hourly = document.querySelector(`#hourly`).value.replace(/[^0-9.]/g, ``);
-          let daily = document.querySelector(`#daily`).value.replace(/[^0-9.]/g, ``);
-          let weekly = document.querySelector(`#weekly`).value.replace(/[^0-9.]/g, ``);
-          let monthly = document.querySelector(`#monthly`).value.replace(/[^0-9.]/g, ``);
-          let yearly = document.querySelector(`#yearly`).value.replace(/[^0-9.]/g, ``);
-          let hourlyTax = document.querySelector(`#hourlyTaxes`).value.replace(/[^0-9.]/g, ``);
-          let dailyTax = document.querySelector(`#dailyTaxes`).value.replace(/[^0-9.]/g, ``);
-          let weeklyTax = document.querySelector(`#weeklyTaxes`).value.replace(/[^0-9.]/g, ``);
-          let monthlyTax = document.querySelector(`#monthlyTaxes`).value.replace(/[^0-9.]/g, ``);
-          let yearlyTax = document.querySelector(`#yearlyTaxes`).value.replace(/[^0-9.]/g, ``);
-
-          if (!hourlyRate && !weeklyHours && !annualSalary) {
-            document.querySelector(`#hourly`).value = `Hourly Wage`;
-            document.querySelector(`#daily`).value = `Daily Income`;
-            document.querySelector(`#weekly`).value = `Weekly Income`;
-            document.querySelector(`#monthly`).value = `Monthly Income`;
-            document.querySelector(`#yearly`).value = `Annual Salary`;
-            document.querySelector(`#hourlyTaxes`).value = `Hourly Taxes`;
-            document.querySelector(`#dailyTaxes`).value = `Daily Taxes`;
-            document.querySelector(`#weeklyTaxes`).value = `Weekly Taxes`;
-            document.querySelector(`#monthlyTaxes`).value = `Monthly Taxes`;
-            document.querySelector(`#yearlyTaxes`).value = `Annual Taxes`;
-            document.querySelector(`#hourlyCash`).value = `Hourly Cash`;
-            document.querySelector(`#dailyCash`).value = `Daily Cash`;
-            document.querySelector(`#weeklyCash`).value = `Weekly Cash`;
-            document.querySelector(`#monthlyCash`).value = `Monthly Cash`;
-            document.querySelector(`#yearlyCash`).value = `Annual Cash`;
-          } else if (hourlyRate && !weeklyHours && !annualSalary) {
-            document.querySelector(`#hourly`).value = `$ ` + hourlyRate.toLocaleString(`en-US`) + ` per Hour`;
-            document.querySelector(`#daily`).value = `$ ` + (hourlyRate * 8).toLocaleString(`en-US`) + ` per Day`;
-            document.querySelector(`#weekly`).value = `$ ` + (hourlyRate * 40).toLocaleString(`en-US`) + ` per Week`;
-            document.querySelector(`#monthly`).value = `$ ` + Math.floor(((hourlyRate * 40) * 52) / 12).toLocaleString(`en-US`) + ` per Month`;
-            document.querySelector(`#yearly`).value = `$ ` + Math.floor((hourlyRate * 40) * 52).toLocaleString(`en-US`) + ` per Year`;
-            document.querySelector(`#hourlyTaxes`).value = `- $ ` + Math.floor(hourlyRate*0.24).toLocaleString(`en-US`) + ` Taxes per Hour`;
-            document.querySelector(`#dailyTaxes`).value = `- $ ` + Math.floor((hourlyRate * (40/5))*0.24).toLocaleString(`en-US`) + ` Taxes per Day`;
-            document.querySelector(`#weeklyTaxes`).value = `- $ ` + Math.floor((hourlyRate * 40)*0.24).toLocaleString(`en-US`) + ` Taxes per Week`;
-            document.querySelector(`#monthlyTaxes`).value = `- $ ` + Math.floor((((hourlyRate * 40)*52) / 12)*0.24).toLocaleString(`en-US`) + ` Taxes per Month`;
-            document.querySelector(`#yearlyTaxes`).value = `- $ ` + Math.floor(((hourlyRate * 40)*52)*0.24).toLocaleString(`en-US`) + ` Taxes per Year`;
-            document.querySelector(`#hourlyCash`).value = `$ ` + Math.floor(hourlyRate-(hourlyRate*0.24)).toLocaleString(`en-US`) + ` Cash per Hour`;
-            document.querySelector(`#dailyCash`).value = `$ ` + Math.floor((hourlyRate-(hourlyRate*0.24))*8).toLocaleString(`en-US`) + ` Cash per Day`;
-            document.querySelector(`#weeklyCash`).value = `$ ` + Math.floor(((hourlyRate-(hourlyRate*0.24))*8)*5).toLocaleString(`en-US`) + ` Cash per Week`;
-            document.querySelector(`#monthlyCash`).value = `$ ` + Math.floor(((((hourlyRate-(hourlyRate*0.24))*8)*5)*52)/12).toLocaleString(`en-US`) + ` Cash per Month`;
-            document.querySelector(`#yearlyCash`).value = `$ ` + Math.floor((((hourlyRate-(hourlyRate*0.24))*8)*5)*52).toLocaleString(`en-US`) + ` Cash per Year`;
-          } else if (hourlyRate && weeklyHours && !annualSalary) {
-            document.querySelector(`#hourly`).value = `$ ` + hourlyRate.toLocaleString(`en-US`) + ` per Hour`;
-            document.querySelector(`#daily`).value = `$ ` + (hourlyRate * (weeklyHours/5)).toLocaleString(`en-US`) + ` per Day`;
-            document.querySelector(`#weekly`).value = `$ ` + (hourlyRate * weeklyHours).toLocaleString(`en-US`) + ` per Week`;
-            document.querySelector(`#monthly`).value = `$ ` + Math.floor(((hourlyRate * weeklyHours) * 52) / 12).toLocaleString(`en-US`) + ` per Month`;
-            document.querySelector(`#yearly`).value = `$ ` + Math.floor((hourlyRate * weeklyHours) * 52).toLocaleString(`en-US`) + ` per Year`;
-            document.querySelector(`#hourlyTaxes`).value = `- $ ` + Math.floor(hourlyRate*0.24).toLocaleString(`en-US`) + ` Taxes per Hour`;
-            document.querySelector(`#dailyTaxes`).value = `- $ ` + Math.floor((hourlyRate * (weeklyHours/5))*0.24).toLocaleString(`en-US`) + ` Taxes per Day`;
-            document.querySelector(`#weeklyTaxes`).value = `- $ ` + Math.floor((hourlyRate * weeklyHours)*0.24).toLocaleString(`en-US`) + ` Taxes per Week`;
-            document.querySelector(`#monthlyTaxes`).value = `- $ ` + Math.floor((((hourlyRate * weeklyHours)*52) / 12)*0.24).toLocaleString(`en-US`) + ` Taxes per Month`;
-            document.querySelector(`#yearlyTaxes`).value = `- $ ` + Math.floor(((hourlyRate * weeklyHours)*52)*0.24).toLocaleString(`en-US`) + ` Taxes per Year`;
-            document.querySelector(`#hourlyCash`).value = `$ ` + Math.floor(hourlyRate-(hourlyRate*0.24)).toLocaleString(`en-US`) + ` Cash per Hour`;
-            document.querySelector(`#dailyCash`).value = `$ ` + Math.floor((hourlyRate-(hourlyRate*0.24))*(weeklyHours/5)).toLocaleString(`en-US`) + ` Cash per Day`;
-            document.querySelector(`#weeklyCash`).value = `$ ` + Math.floor(((hourlyRate-(hourlyRate*0.24))*(weeklyHours/5))*5).toLocaleString(`en-US`) + ` Cash per Week`;
-            document.querySelector(`#monthlyCash`).value = `$ ` + Math.floor(((((hourlyRate-(hourlyRate*0.24))*(weeklyHours/5))*5)*52)/12).toLocaleString(`en-US`) + ` Cash per Month`;
-            document.querySelector(`#yearlyCash`).value = `$ ` + Math.floor((((hourlyRate-(hourlyRate*0.24))*(weeklyHours/5))*5)*52).toLocaleString(`en-US`) + ` Cash per Year`;
-          } else if (!hourlyRate && !weeklyHours && annualSalary) {
-            document.querySelector(`#hourly`).value = `$ ` + Math.floor((annualSalary / 260) / 8).toLocaleString(`en-US`) + ` per Hour`;
-            document.querySelector(`#daily`).value = `$ ` + Math.floor(annualSalary / 260).toLocaleString(`en-US`) + ` per Day`;
-            document.querySelector(`#weekly`).value = `$ ` + Math.floor(annualSalary / 52).toLocaleString(`en-US`) + ` per Week`;
-            document.querySelector(`#monthly`).value = `$ ` + Math.floor(annualSalary / 12).toLocaleString(`en-US`) + ` per Month`;
-            document.querySelector(`#yearly`).value = `$ ` + Math.floor(annualSalary).toLocaleString(`en-US`) + ` per Year`;
-            document.querySelector(`#hourlyTaxes`).value = `- $ ` + Math.floor(((annualSalary / 260) / 8)* 0.24).toLocaleString(`en-US`) + ` Taxes per Hour`;
-            document.querySelector(`#dailyTaxes`).value = `- $ ` + Math.floor((annualSalary / 260) * 0.24).toLocaleString(`en-US`) + ` Taxes per Day`;
-            document.querySelector(`#weeklyTaxes`).value = `- $ ` + Math.floor((annualSalary / 52) * 0.24).toLocaleString(`en-US`) + ` Taxes per Week`;
-            document.querySelector(`#monthlyTaxes`).value = `- $ ` + Math.floor((annualSalary / 12) * 0.24).toLocaleString(`en-US`) + ` Taxes per Month`;
-            document.querySelector(`#yearlyTaxes`).value = `- $ ` + Math.floor(annualSalary * 0.24).toLocaleString(`en-US`) + ` Taxes per Year`;
-            document.querySelector(`#hourlyCash`).value = `$ ` + Math.floor(((annualSalary / 260) / 8)-(((annualSalary / 260) / 8)*0.24)).toLocaleString(`en-US`) + ` Cash per Hour`;
-            document.querySelector(`#dailyCash`).value = `$ ` + Math.floor((annualSalary / 260)-((annualSalary / 260) * 0.24)).toLocaleString(`en-US`) + ` Cash per Day`;
-            document.querySelector(`#weeklyCash`).value = `$ ` + Math.floor((annualSalary / 52)-((annualSalary / 52) * 0.24)).toLocaleString(`en-US`) + ` Cash per Week`;
-            document.querySelector(`#monthlyCash`).value = `$ ` + Math.floor((annualSalary / 12)-((annualSalary / 12) * 0.24)).toLocaleString(`en-US`) + ` Cash per Month`;
-            document.querySelector(`#yearlyCash`).value = `$ ` + Math.floor(annualSalary-(annualSalary * 0.24)).toLocaleString(`en-US`) + ` Cash per Year`;
-          }
-
-      }
-      updateStats(event);"
-        on
-      >
+      <form class="financialForm" id="financialForm">
         <input
           type="text"
           name="hourlyInput"
@@ -122,7 +34,7 @@
         />
       </form>
       <h2>Personal Information</h2>
-      <form class="personalForm">
+      <form class="personalForm" onclick="test()">
         <input
           type="text"
           name="name"
