--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,22 @@ h2 {
   font-style: italic;
 }
 
+button {
+  padding: 15px 50px;
+  border-radius: 4px;
+  font-weight: 500;
+  width: 100%;
+  background: #2196f3;
+}
+
+.buttons {
+  padding-top: 15px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  grid-gap: 20px;
+}
+
 .md body {
   --ion-background-color: #455a64;
   --ion-toolbar-background: #000000;
